changeed deploy.yml

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,4 +17,4 @@ jobs:
       - name: Push to hub
         env:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
-        run: git push https://andreped:$HF_TOKEN@huggingface.co/spaces/andreped/ViT-ImageClassifier main
+        run: git push https://tno123:$HF_TOKEN@huggingface.co/spaces/tno123/catdogtest
